--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>org.apache.cayenne</groupId>
             <artifactId>cayenne-server</artifactId>
-            <version>3.1M2</version>
+            <version>3.1-SNAPSHOT</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
